err/vidme.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vidme'...
Compiling './lib/python3.5/site-packages/vidme/Session.py'...
***   File "./lib/python3.5/site-packages/vidme/Session.py", line 39
    print "[!] Please make sure oauth redirect is: 'http://localhost:5010'"
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vidme/User.py'...
***   File "./lib/python3.5/site-packages/vidme/User.py", line 85
    print total
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vidme/Video.py'...
***   File "./lib/python3.5/site-packages/vidme/Video.py", line 189
    print "[-] No uri given!"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vidme/api.py'...
***   File "./lib/python3.5/site-packages/vidme/api.py", line 38
    print "uri:", uri
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vidme-0.8.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
